[gd_scene load_steps=3 format=3 uid="uid://c3j8k9l5m6n7o8p9"]

[ext_resource type="Script" path="res://ui/tutorial/tutorial_overlay.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TutorialOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)
mouse_filter = 2

[node name="HighlightRect" type="ColorRect" parent="."]
visible = false
color = Color(1, 1, 0, 0.3)
mouse_filter = 2

[node name="MessagePanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="MessagePanel"]
layout_mode = 2

[node name="Title" type="Label" parent="MessagePanel/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Tutorial Title"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MessagePanel/VBoxContainer"]
layout_mode = 2

[node name="Message" type="RichTextLabel" parent="MessagePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Tutorial message goes here. This can contain [b]bold text[/b] and other formatting."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="MessagePanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MessagePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PreviousButton" type="Button" parent="MessagePanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Previous"

[node name="SkipButton" type="Button" parent="MessagePanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Skip Tutorial"

[node name="NextButton" type="Button" parent="MessagePanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Next"

[node name="Arrow" type="Polygon2D" parent="."]
visible = false
color = Color(1, 1, 0, 1)
polygon = PackedVector2Array(0, 0, 20, 10, 0, 20)

[connection signal="pressed" from="MessagePanel/VBoxContainer/ButtonContainer/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="MessagePanel/VBoxContainer/ButtonContainer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="MessagePanel/VBoxContainer/ButtonContainer/NextButton" to="." method="_on_next_button_pressed"]
